--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.10.4",
     "convex": "^1.18.2",
     "next": "14.2.18",
     "react": "^18",
