--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.10.4",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "convex": "^1.18.2",
+    "framer-motion": "^12.0.6",
+    "lucide-react": "^0.474.0",
     "next": "14.2.18",
     "react": "^18",
     "react-dom": "^18",
-    "svix": "^1.45.1"
+    "react-icons": "^5.4.0",
+    "svix": "^1.45.1",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
