--- a/package.json
+++ b/package.json
@@ -9,30 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.19.2",
+    "@blocknote/mantine": "^0.19.2",
+    "@blocknote/react": "^0.19.2",
+    "@clerk/clerk-react": "^5.22.8",
     "@clerk/nextjs": "^6.10.4",
+    "@edgestore/react": "^0.2.2",
+    "@edgestore/server": "^0.2.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
+    "edgestore": "^1.0.3",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "sonner": "^1.7.3",
     "svix": "^1.45.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
     "postcss": "^8",
