--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
@@ -30,6 +31,7 @@
     "convex": "^1.18.2",
     "date-fns": "^4.1.0",
     "edgestore": "^1.0.3",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.6",
     "lucide-react": "^0.474.0",
     "next": "14.2.18",
