--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@radix-ui/react-aspect-ratio": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-hover-card": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -33,6 +35,7 @@
     "edgestore": "^1.0.3",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "next": "14.2.18",
     "next-themes": "^0.4.4",
@@ -47,6 +50,7 @@
     "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
