--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tabler/icons-react": "^3.29.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "convex": "^1.18.2",
     "date-fns": "^4.1.0",
     "edgestore": "^1.0.3",
