--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/nextjs": "^6.10.4",
     "@edgestore/react": "^0.2.2",
     "@edgestore/server": "^0.2.2",
+    "@formspree/react": "^2.5.1",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
